--- a/application/configs/application.ini
+++ b/application/configs/application.ini
@@ -29,8 +29,8 @@ resources.mail.transport.ssl        = tls
 resources.mail.transport.port       = 587
 resources.mail.transport.host       = "smtp.gmail.com"
 resources.mail.transport.auth       = login
-resources.mail.transport.username   = "dsnippetmanager@gmail.com"
-resources.mail.transport.password   = defender1
+resources.mail.transport.username   = ;the email
+resources.mail.transport.password   = ;the password
 resources.mail.transport.register   = true ; True by default
 resources.mail.defaultFrom.email    = support@dsnippet.com
 resources.mail.defaultFrom.name     = Support
@@ -124,8 +124,8 @@ resources.mail.transport.ssl        = tls
 resources.mail.transport.port       = 587
 resources.mail.transport.host       = "smtp.gmail.com"
 resources.mail.transport.auth       = login
-resources.mail.transport.username   = "dsnippetmanager@gmail.com"
-resources.mail.transport.password   = defender1
+resources.mail.transport.username   = ;the email
+resources.mail.transport.password   = ;the password
 resources.mail.transport.register   = true ; True by default
 resources.mail.defaultFrom.email    = support@dsnippet.com
 resources.mail.defaultFrom.name     = Support
